<?xml version="1.0" encoding="utf-8"?>
<lib.rocigno.usefulthingslib.CustomViews.Views.AutoValidateLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/avllMain_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7EE"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingTop="40dp"
    android:paddingEnd="40dp"
    android:paddingBottom="20dp"
    tools:context=".Views.LoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/msg_login"
        android:textAlignment="center"
        android:textColor="@color/colorSecodary"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <lib.rocigno.usefulthingslib.CustomViews.Views.AutoValidateEditText
            android:id="@+id/avetEmail_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:obrigatory_field="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <lib.rocigno.usefulthingslib.CustomViews.Views.AutoValidateEditText
            android:id="@+id/avetSenha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            app:obrigatory_field="true" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnEntrar_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="6dp"
        android:text="@string/entrar" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nao_tem_conta"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtCadastro_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/cadastre_se"
            android:textColor="?colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLista_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lista_de_usuarios"
            android:textColor="?colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

</lib.rocigno.usefulthingslib.CustomViews.Views.AutoValidateLinearLayout>