<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_padding"
    android:paddingTop="10dp"
    android:paddingEnd="@dimen/layout_padding"
    android:paddingBottom="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:text="@string/id_lbl"
                android:textColor="@color/colorSecodary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtID_celllista"
                android:layout_marginStart="5dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/email_lbl"
                android:textColor="@color/colorSecodary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmail_celllista"
                android:layout_marginStart="5dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/usuario_lbl"
                android:textColor="@color/colorSecodary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUser_celllista"
                android:layout_marginStart="5dp" />
        </TableRow>


    </TableLayout>

</LinearLayout>