<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_default"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorSecodary"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorSecodary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/ola"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtUsuario_nav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llChange_nav"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:foreground="?android:selectableItemBackground"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecodary"
                    android:gravity="center_vertical"
                    android:text="@string/alterar_senha"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@color/colorSecodary"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llExit_nav"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?android:selectableItemBackground"
                    android:background="@drawable/border_top"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorSecodary"
                        android:gravity="center_vertical"
                        android:text="@string/sair"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_arrow_right"
                        android:tint="@color/colorSecodary"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
